@@ -15,6 +15,14 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <skip.maven.surefire>false</skip.maven.surefire>
+        <skip.maven.shade>false</skip.maven.shade>
+        <skip.native.build>false</skip.native.build>
+        <regular-jar>${project.artifactId}-${project.version}</regular-jar>
+        <native-image-jar>${project.artifactId}-${project.version}-for-native</native-image-jar>
+        <main-class>de.atextor.ret.cli.OWLCLI</main-class>
+        <binary-name>owl</binary-name>
     </properties>
 
     <dependencies>
@@ -38,22 +46,16 @@
 
         <!-- General dependencies -->
         <dependency>
-            <groupId>net.sourceforge.owlapi</groupId>
-            <artifactId>owlapi-distribution</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -104,11 +106,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>io.github.classgraph</groupId>
             <artifactId>classgraph</artifactId>
             <scope>test</scope>
@@ -144,10 +141,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <!-- Do NOT wildcard include *Test.java, because then we would also run the IntegrationTests -->
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <skip>${skip.maven.surefire}</skip>
                     <includes>
-                        <include>**/CommandLineTest.java</include>
-                        <include>**/DiagramCommandTest.java</include>
+                        <include>**/OwlCliTest.java</include>
                     </includes>
                 </configuration>
             </plugin>
@@ -157,19 +155,198 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <executions>
                     <execution>
+                        <phase>integration-test</phase>
                         <goals>
                             <goal>integration-test</goal>
-                            <goal>verify</goal>
                         </goals>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <executableJar>${project.build.directory}/${project.artifactId}-${project.version}.jar
+                                </executableJar>
+                                <binary>${project.build.directory}/${binary-name}</binary>
+                            </systemPropertyVariables>
+                            <forkCount>1</forkCount>
+                            <reuseForks>true</reuseForks>
+                            <includes>
+                                <include>**/ExecutableJarTest.java</include>
+                                <include>**/BinaryTest.java</include>
+                            </includes>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <includes>
-                        <include>**/*IntegrationTest.java</include>
-                    </includes>
-                </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>shade-for-native-image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>${native-image-jar}</finalName>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <skip>${skip.maven.shade}</skip>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Main-Class>${main-class}</Main-Class>
+                                    </manifestEntries>
+                                </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                            </transformers>
+                            <artifactSet>
+                                <excludes>
+                                    <!-- GraalVM SDK classes & friends must not be used at runtime -->
+                                    <exclude>org.graalvm.sdk:graal-sdk</exclude>
+                                    <exclude>org.graalvm.nativeimage:svm</exclude>
+                                    <exclude>org.graalvm.truffle:truffle-api</exclude>
+                                    <exclude>org.graalvm.nativeimage:native-image-base</exclude>
+                                    <exclude>org.graalvm.nativeimage:pointsto</exclude>
+                                    <exclude>org.graalvm.nativeimage:objectfile</exclude>
+                                    <exclude>org.graalvm.compiler:compiler</exclude>
+                                </excludes>
+                            </artifactSet>
+                            <filters>
+                                <!-- Required to prevent overlapping resources -->
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>module-info.class</exclude>
+                                        <exclude>META-INF/*</exclude>
+                                        <exclude>META-INF/sisu/javax.inject.Named</exclude>
+                                        <exclude>META-INF/plexus/components.xml</exclude>
+                                        <exclude>META-INF.versions*/**</exclude>
+                                        <exclude>META-INF/versions*/**</exclude>
+                                        <exclude>META-INF/maven/**</exclude>
+                                        <exclude>plugin.xml</exclude>
+                                        <exclude>about.html</exclude>
+                                    </excludes>
+                                </filter>
+                                <!-- Required to override the excludes above -->
+                                <filter>
+                                    <artifact>${project.groupId}:${project.artifactId}</artifact>
+                                    <excludeDefaults>false</excludeDefaults>
+                                    <includes>
+                                        <include>**</include>
+                                        <include>META-INF/**</include>
+                                        <include>git.properties</include>
+                                    </includes>
+                                    <excludes>
+                                        <!-- Explicitly exclude build-time-only code from jar -->
+                                        <exclude>de/atextor/ret/core/buildtime/**</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>default-shade</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>${regular-jar}</finalName>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <skip>${skip.maven.shade}</skip>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Main-Class>${main-class}</Main-Class>
+                                    </manifestEntries>
+                                </transformer>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                            </transformers>
+                            <filters>
+                                <!-- Required to prevent overlapping resources -->
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>module-info.class</exclude>
+                                        <exclude>META-INF/*</exclude>
+                                        <exclude>META-INF/sisu/javax.inject.Named</exclude>
+                                        <exclude>META-INF/plexus/components.xml</exclude>
+                                        <exclude>META-INF.versions*/**</exclude>
+                                        <exclude>META-INF/versions*/**</exclude>
+                                        <exclude>META-INF/maven/**</exclude>
+                                        <exclude>plugin.xml</exclude>
+                                        <exclude>about.html</exclude>
+                                    </excludes>
+                                </filter>
+                                <!-- Required to override the excludes above -->
+                                <filter>
+                                    <artifact>${project.groupId}:${project.artifactId}</artifact>
+                                    <excludeDefaults>false</excludeDefaults>
+                                    <includes>
+                                        <include>**</include>
+                                        <include>META-INF/**</include>
+                                        <include>git.properties</include>
+                                    </includes>
+                                    <excludes>
+                                        <!-- Explicitly exclude build-time-only code from jar -->
+                                        <exclude>de/atextor/ret/core/buildtime/**</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>native</id>
+            <properties>
+                <skip.maven.surefire>true</skip.maven.surefire>
+                <maven.resources.skip>true</maven.resources.skip>
+            </properties>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native-maven-plugin-version}</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                                <phase>pre-integration-test</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <mainClass>${main-class}</mainClass>
+                            <imageName>${binary-name}</imageName>
+                            <skipNativeBuild>${skip.native.build}</skipNativeBuild>
+                            <skipNativeTests>true</skipNativeTests>
+                            <buildArgs>
+                                <arg>-J-XX:MaxRAMPercentage=90.0</arg>
+                                <arg>-J-XX:GCTimeRatio=19</arg>
+                                <arg>-J--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                                <arg>-J--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
+                            </buildArgs>
+                            <quickBuild>true</quickBuild>
+                            <classpath>
+                                <param>${project.build.directory}/${native-image-jar}.jar</param>
+                            </classpath>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
